--- a/FitZuyd/FitZuyd.csproj
+++ b/FitZuyd/FitZuyd.csproj
@@ -46,18 +46,56 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Activity.cs" />
+    <Compile Include="Forms\MemberLanding.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MemberLanding.Designer.cs">
+      <DependentUpon>MemberLanding.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MemberLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MemberLogin.Designer.cs">
+      <DependentUpon>MemberLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MemberMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MemberMenu.Designer.cs">
+      <DependentUpon>MemberMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MemberRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MemberRegister.Designer.cs">
+      <DependentUpon>MemberRegister.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Activity.cs" />
+    <Compile Include="DAL.cs" />
     <Compile Include="Landing.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Landing.Designer.cs">
       <DependentUpon>Landing.cs</DependentUpon>
     </Compile>
-    <Compile Include="Location.cs" />
-    <Compile Include="Member.cs" />
+    <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Trainer.cs" />
+    <Compile Include="Models\Trainer.cs" />
+    <EmbeddedResource Include="Forms\MemberLanding.resx">
+      <DependentUpon>MemberLanding.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MemberLogin.resx">
+      <DependentUpon>MemberLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MemberMenu.resx">
+      <DependentUpon>MemberMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MemberRegister.resx">
+      <DependentUpon>MemberRegister.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Landing.resx">
       <DependentUpon>Landing.cs</DependentUpon>
     </EmbeddedResource>
