--- a/FitZuyd/FitZuyd.csproj
+++ b/FitZuyd/FitZuyd.csproj
@@ -70,6 +70,30 @@
     <Compile Include="Forms\MemberRegister.Designer.cs">
       <DependentUpon>MemberRegister.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\TrainerLanding.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainerLanding.Designer.cs">
+      <DependentUpon>TrainerLanding.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TrainerLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainerLogin.Designer.cs">
+      <DependentUpon>TrainerLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TrainerMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainerMenu.Designer.cs">
+      <DependentUpon>TrainerMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TrainerRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainerRegister.Designer.cs">
+      <DependentUpon>TrainerRegister.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Activity.cs" />
     <Compile Include="DAL.cs" />
     <Compile Include="Landing.cs">
@@ -95,6 +119,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MemberRegister.resx">
       <DependentUpon>MemberRegister.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainerLanding.resx">
+      <DependentUpon>TrainerLanding.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainerLogin.resx">
+      <DependentUpon>TrainerLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainerMenu.resx">
+      <DependentUpon>TrainerMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainerRegister.resx">
+      <DependentUpon>TrainerRegister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Landing.resx">
       <DependentUpon>Landing.cs</DependentUpon>
