--- a/FitZuyd/FitZuyd.csproj
+++ b/FitZuyd/FitZuyd.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Member.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Sport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Trainer.cs" />
