--- a/FitZuyd/FitZuyd.csproj
+++ b/FitZuyd/FitZuyd.csproj
@@ -94,6 +94,12 @@
     <Compile Include="Forms\TrainerLanding.Designer.cs">
       <DependentUpon>TrainerLanding.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\TrainerLocationCreate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainerLocationCreate.Designer.cs">
+      <DependentUpon>TrainerLocationCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\TrainerLocations.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +139,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Trainer.cs" />
+    <Compile Include="TrainerLocationUpdateDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrainerLocationUpdateDelete.Designer.cs">
+      <DependentUpon>TrainerLocationUpdateDelete.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Forms\MemberActivtity.resx">
       <DependentUpon>MemberActivtity.cs</DependentUpon>
     </EmbeddedResource>
@@ -156,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TrainerLanding.resx">
       <DependentUpon>TrainerLanding.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainerLocationCreate.resx">
+      <DependentUpon>TrainerLocationCreate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TrainerLocations.resx">
       <DependentUpon>TrainerLocations.cs</DependentUpon>
@@ -181,6 +196,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TrainerLocationUpdateDelete.resx">
+      <DependentUpon>TrainerLocationUpdateDelete.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
