--- a/FitZuyd/FitZuyd.csproj
+++ b/FitZuyd/FitZuyd.csproj
@@ -88,6 +88,24 @@
     <Compile Include="Forms\TrainerActivity.Designer.cs">
       <DependentUpon>TrainerActivity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\TrainerActivityCreate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainerActivityCreate.Designer.cs">
+      <DependentUpon>TrainerActivityCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TrainerActivityDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainerActivityDelete.Designer.cs">
+      <DependentUpon>TrainerActivityDelete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TrainerActivityUpdate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainerActivityUpdate.Designer.cs">
+      <DependentUpon>TrainerActivityUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\TrainerLanding.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +189,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TrainerActivity.resx">
       <DependentUpon>TrainerActivity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainerActivityCreate.resx">
+      <DependentUpon>TrainerActivityCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainerActivityDelete.resx">
+      <DependentUpon>TrainerActivityDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainerActivityUpdate.resx">
+      <DependentUpon>TrainerActivityUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TrainerLanding.resx">
       <DependentUpon>TrainerLanding.cs</DependentUpon>
